@@ -1,0 +1,5 @@
+module ExplicitHelper
+  def method_in_explicit_helper
+    "<div>This is text from a method in the ExplicitHelper</div>"
+  end
+end
