@@ -1,0 +1,1 @@
+<%= method_in_explicit_helper %>
