@@ -1,0 +1,2 @@
+<%= method_in_explicit_helper %>
+<%= method_in_more_explicit_helper %>
